test/files/neg/t5735.check
t5735.scala:6: error: type mismatch;
 found   : (x: Int)Int <and> => String
 required: Int
  val z: Int = a
               ^
one error found
